--- a/styles/button.css
+++ b/styles/button.css
@@ -9,3 +9,12 @@
     transition: 0.3s;
 }
 
+.btn:active {
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4)
+}
+
+.centered-button-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
